--- a/photo/templates/photo/base_menu.html
+++ b/photo/templates/photo/base_menu.html
@@ -1,14 +1,6 @@
 {% extends 'photo/base.html' %}
 {% load static %}
 
-{% block style %}
-<style>
-.navbar-brand img {
-  xbackground-color: red;
-}
-</style>
-{% endblock %}
-
 {% block page %}
   <header>
     <nav class="navbar navbar-expand-lg  bg-dark d-print-none" data-bs-theme="dark">
@@ -29,11 +21,15 @@
               <a class="nav-link" aria-current="page" id="menu_album" aria-current="page" href="{% url 'photo:album' %}">Album</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" id="menu_slides" href="{% url 'photo:show' %}">Billeder</a>
+              <a class="nav-link" aria-current="page" id="menu_show" href="{% url 'photo:show' %}">Billeder</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" id="menu_slides" href="{% url 'photo:slide' %}">Slide </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" id="menu_label" href="{% url 'photo:label' %}">Label</a>
+            </li>
+
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" id="menu_func" href="{% url 'photo:functions' %}">Funktioner</a>
               </li>
