check json file

--- a/photo/templates/photo/label.html
+++ b/photo/templates/photo/label.html
@@ -10,8 +10,8 @@
     <form method="post" class="my-class">
       {% csrf_token %}
       {{ form|crispy }}
-      <input type="submit" value="read">
-      <input type="submit" value="write" class="btn btn-primary">
+  
+      <input type="submit" value="Update" class="btn btn-primary">
     </form>
  
   </div>
