--- a/photo/templates/photo/album.html
+++ b/photo/templates/photo/album.html
@@ -10,8 +10,8 @@
         <tr>
           <th scope="col">Titel</th>
           <th scope="col">Sted</th>
-          <th scope="col">Antal billeder</th>         
-          <th scope="col">Antal Videoer</th>
+          <th scope="col">Billeder</th>
+          <th scope="col">Videoer</th>
           {% if devel %}
             <th scope="col">Path</th>
             <th scope="col">Dato</th>
@@ -27,7 +27,7 @@
             <td>{{ f.no_video }}</td>
             {% if devel %}
             <td><a href="/photo/show?folder={{ f.folder }}"> {{ f.folder }}</a></td>
-            <td>{{ f.date }}</td>
+            <td>{{ f.date|date:"d-m-Y" }}</td>
             {% endif %}
           </tr>
         {% endfor %}
