--- a/photo/templates/photo/show.html
+++ b/photo/templates/photo/show.html
@@ -55,7 +55,7 @@
     </div>
   <div class="footer d-print-none">   
       <button class="btn btn-primary" title="Gem" onclick="slideSave()"><i class="bi bi-save"></i></button>
-      <button class="btn btn-primary" title="Gem Album" onclick="location.href='{% url "photo:makezip" %}?folder={{folder}}'"><i class="bi bi-save"></i></button>
+      <a class="btn btn-primary" title="Gem Album" onclick="location.href='{% url "photo:makezip" %}?folder={{folder}}'"><i class="bi bi-save"></i></a>
       <button class="btn btn-primary" title="Print" onclick="printPage()"><i class="bi bi-printer"></i></button>
       <button class="btn btn-primary" title="Pause" onclick="slidePause()"><i class="bi bi-pause"></i></button>
       <button class="btn btn-primary" title="Kør" onclick="slideStart()"><i class="bi bi-play"></i></button>
